--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <nav>
           <!-- <a href="{{ site.baseurl }}/">Blog</a> -->
           <a href="{{ site.baseurl }}/projects">Projects</a>
-          <a href="{{ site.baseurl }}/about">About</a>
+          <a href="{{ site.baseurl }}/blog">Blog</a>
         </nav>
       </header>
     </div>
@@ -40,7 +40,7 @@
   <div id="main" role="main" class="container">
     {{ content }}
   </div>
-
+<!--
   <div class="wrapper-footer">
     <div class="container">
       <footer class="footer">
@@ -48,7 +48,7 @@
       </footer>
     </div>
   </div>
-
+-->
   {% include analytics.html %}
 </body>
 
